--- a/css/productCss.css
+++ b/css/productCss.css
@@ -34,14 +34,21 @@ body {
 }
 
 .title {
-    text-align: center;
-    margin-bottom: 1em;
-    
+    text-align: left;
+   width: 90%;
+    margin: 0 auto;
 }
 
+
+ 
+
 .text {
-    margin: 1em;
+    
+    width: 90%;
+    margin: 0 auto;
     line-height: 1.5em;
+    word-break: break-all;
+    hyphens: auto;
 }
 
 .sourceList > li {
@@ -189,3 +196,26 @@ body {
         width: auto;
     }
 }
+
+h1{
+    font-size: 2.8em;
+}
+
+h2{
+    font-size: 2.4em;
+ }
+
+ #tableOfContentsTitle{
+    font-size: 1.2em;
+ }
+
+figure h3{
+    font-size: 1.2em;
+}
+#Sources{
+    font-size: 1.8em; 
+}
+
+ h3{
+     font-size: 1.8em;
+  }
